--- a/src/main/resources/templates/welcome.html
+++ b/src/main/resources/templates/welcome.html
@@ -15,7 +15,9 @@
         <br>
 
         <div class="float-right logged-in" sec:authorize="isAuthenticated()">
-            <a href="/api/logout">Log-out: <span></span></a>
+            <a href="/api/logout">Log-out: </a>
+            <span sec:authentication="name"></span>
+            <br><span sec:authentication="principal.authorities"></span>
         </div>
 
         <span class="clear-float">
